--- a/app/pages/contact/contact.html
+++ b/app/pages/contact/contact.html
@@ -1,9 +1,13 @@
-<ion-header>
+<ion-header>                                                                 <!--navbar组件-->
   <ion-navbar>
+    <button menuToggle>                                                      <!--调用menuToggle组件-->
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
       Contact
     </ion-title>
   </ion-navbar>
+
 </ion-header>
 
 <ion-content>
@@ -15,3 +19,4 @@
     </ion-item>
   </ion-list>
 </ion-content>
+
