--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs #myTabs>
+  <ion-tab [root]="tab1Root" tabTitle="我的好友" tabIcon="aperture"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="悦读" tabIcon="book"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="用户中心" tabIcon="person"></ion-tab>
 </ion-tabs>
