--- a/app/pages/addbook/addbook.html
+++ b/app/pages/addbook/addbook.html
@@ -8,6 +8,6 @@
     </ion-buttons>
   </ion-toolbar>
     <ion-label primary>搜索图书</ion-label>
-    <ion-input placeholder="请输入书名"></ion-input>
-    <button block>确定</button>
+    <ion-input placeholder="请输入书名" [(ngModel)]="newbook.title"></ion-input>
+    <button block (click)="searchbook()">确定</button>
 </ion-content>`
