--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -16,8 +16,8 @@
             <ion-avatar item-left>
                 <img src="images/{{client.clientid}}.jpg">
             </ion-avatar>
-            <h2 textAlignRight>{{client.clientname}}</h2>
-            <p textAlignRight>{{client.clienttext}}</p>
+            <h2>{{client.clientname}}</h2>
+            <p>{{client.clienttext}}</p>
          </ion-item>
          <ion-item-options>
              <button danger (click)="removeClient(client)">
